--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ Brotli==1.0.9
 brotlicffi==1.0.9.2
 cchardet==2.1.7
 ConfigParser==5.3.0
-cryptography==3.4.8
+cryptography
 Cython==0.29.30
 dl==0.1.0
 docutils==0.17.1
